install (FILES hi16-app-plasmagik.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/16x16/apps/ RENAME plasmagik.png)
install (FILES hi22-app-plasmagik.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/22x22/apps/ RENAME plasmagik.png)
install (FILES hi32-app-plasmagik.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/32x32/apps/ RENAME plasmagik.png)
install (FILES hi48-app-plasmagik.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/48x48/apps/ RENAME plasmagik.png)
install (FILES hi64-app-plasmagik.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/64x64/apps/ RENAME plasmagik.png)
install (FILES hi128-app-plasmagik.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/128x128/apps/ RENAME plasmagik.png)

